fix line wrapping

--- a/src/components/QuillEditor/QuillEditor.less
+++ b/src/components/QuillEditor/QuillEditor.less
@@ -133,7 +133,7 @@ div.quill {
   }
   
   li {
-    line-break: anywhere;
+    line-break: normal;
   }
 
   li::before {
